--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">azenMobile</string>
+    <string name="app_name">AZEN Store</string>
     <string name="facebook_app_id">2720572981402393</string>
 </resources>
